log/.build-neural-reversi.log
Building Neural Reversi adapter...
rm -rf coach-engine
# Apply arena-stats patch (JSON stats + depth + GTP default + raw weight loader)
# Build CLI crate (cd to source dir first)
cd /home/oliv/dev/agent/othello-refs/coach-adapters/neural-reversi/../../neural-reversi/src && cargo build --release -p cli
   Compiling cli v6.1.0 (/home/oliv/dev/agent/othello-refs/neural-reversi/src/crates/cli)
error[E0599]: no method named `is_over` found for reference `&Board` in the current scope
   --> crates/cli/src/gtp.rs:655:34
    |
655 |             if self.game.board().is_over() { std::process::exit(0); }
    |                                  ^^^^^^^
    |
help: there is a method `is_game_over` with a similar name
    |
655 |             if self.game.board().is_game_over() { std::process::exit(0); }
    |                                     +++++

warning: unreachable statement
   --> crates/cli/src/main.rs:271:13
    |
269 |               return;
    |               ------ any code following this expression is unreachable
270 |               // (old TUI path kept but not used)
271 | /             tui::run(
272 | |                 args.engine_params.hash_size,
273 | |                 args.engine_params.level,
274 | |                 Selectivity::from_u8(args.engine_params.selectivity),
...   |
280 | |                 eprintln!("Failed to initialize UI: {err}");
281 | |             });
    | |_______________^ unreachable statement
    |
    = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `cli` (bin "cli") generated 1 warning
error: could not compile `cli` (bin "cli") due to 1 previous error; 1 warning emitted
make: *** [Makefile:13: coach-build] Error 101
